--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -6,6 +6,9 @@ worker_processes  1;
 #error_log  logs/error.log  notice;
 #error_log  logs/error.log  info;
 
+daemon off;
+master_process off;
+
 #pid        logs/nginx.pid;
 
 
