--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -35,6 +35,11 @@ http {
 
     #gzip  on;
 
+    upstream order {
+        server 127.0.0.1:8081 weight=5;
+        server 127.0.0.1:8082 weight=1;
+    }
+
     server {
         listen       80;
         server_name  localhost;
@@ -46,6 +51,7 @@ http {
         location / {
             root   html;
             index  index.html index.htm;
+            proxy_pass  http://order;
         }
 
         #error_page  404              /404.html;
