--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -36,8 +36,7 @@ http {
     #gzip  on;
 
     upstream order {
-        server 127.0.0.1:8081 weight=5;
-        server 127.0.0.1:8082 weight=1;
+        server 127.0.0.1:8081;
     }
 
     server {
